--- a/style.css
+++ b/style.css
@@ -4,6 +4,17 @@
 }
 
 
+#about > a > img{
+    width: 85px;
+    border-radius: 10px;
+    padding: 5px;
+    background-color: white;
+    
+    position: absolute;
+    top: 57px;
+    left: 70px;
+}
+
 
 /* CONFIG. COM CLASS */
 
@@ -85,17 +96,15 @@ a:hover{
 
 }
 
-
-h1{
-    width: 100%;
-    text-align: center ;
-    padding: 50px;
+caption{
+    margin-top: 50px;
+    font-size: 1.5em;
+    padding: 20px;
+    background-color: black;
+    color: white;
+    font-weight: bold;
 }
 
-h1 a{
-
-    font-size: 0.7em;
-}
 
 table{
     margin: auto;
@@ -103,7 +112,7 @@ table{
     margin-bottom: 50px;
 }
 
-thead > tr > td{
+thead > tr > th{
     line-height: 1.5em;
     border: 1px solid #a0a2a5;
     background-color: #EAECF0;
@@ -122,19 +131,4 @@ tbody > tr > td{
     white-space: nowrap;
     border: 1px solid #a0a2a5;
     background-color: #F8F9FA;
-}
-
-footer{
-    width: 100%;
-    background-color: black;
-    color: white;
-    text-align: center;
-    padding: 10px;
-}
-
-footer a{
-    text-decoration: none;
-    color: white;
-    font-weight:bold;
-    font-size: 1.5em;
 }
